--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>World Time</title>
+    <meta name="author" content="Willem Devriendt">
+    <meta name="description" content="Welkom bij de Tedeapoolse Telegraaf, de krant van wakker Tedeapolis"
+    <title>Tedeapoolse Telegraaf</title>
     <!-- plugin css for this page -->
     <link
       rel="stylesheet"
@@ -64,7 +66,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                   <div>
                     <a class="navbar-brand" href="#"
-                      ><img src="assets/images/logo.svg" alt=""
+                      ><img src="assets/images/logo_wit.png" alt=""
                     /></a>
                   </div>
                   <div>
@@ -91,29 +93,42 @@
                           </button>
                         </li>
                         <li class="nav-item active">
-                          <a class="nav-link" href="index.html">Home</a>
+                          <a class="nav-link" href="index.html">Voorpagina</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="pages/magazine.html">MAGAZINE</a>
+                          <a class="nav-link" href="pages/magazine.html">Opinie</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="pages/business.html">Business</a>
+                          <a class="nav-link" href="pages/business.html">Gemeente</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="pages/sports.html">Sports</a>
+                          <a class="nav-link" href="pages/sports.html">Justitie</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="pages/art.html">Art</a>
+                          <a class="nav-link" href="pages/art.html">Politie</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="pages/politics.html">POLITICS</a>
+                          <a class="nav-link" href="pages/politics.html">Ambulance</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="pages/travel.html">Travel</a>
+                          <a class="nav-link" href="pages/travel.html">ANWB</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="pages/contactus.html">Contact</a>
+                          <a class="nav-link" href="pages/contactus.html">Ook dat nog</a>
                         </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="pages/contactus.html">Economie</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="pages/contactus.html">Reizen</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="pages/contactus.html">TDA Nieuws</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="pages/contactus.html">Digitale Telegraaf</a>
+                        </li>
+
                       </ul>
                     </div>
                   </div>
@@ -124,7 +139,7 @@
                       </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="https://www.youtube.com/@DeJoentjes" target="blank">
                         <i class="mdi mdi-youtube"></i>
                       </a>
                     </li>
@@ -145,7 +160,7 @@
           <div class="container">
             <div class="d-lg-flex align-items-center justify-content-between">
               <div class="d-flex align-items-center">
-                <span class="badge badge-dark mr-3">Flash news</span>
+                <span class="badge badge-dark mr-3">Brekend nieuws</span>
                 <p class="mb-0">
                   Lorem Ipsum has been the industry's standard dummy text ever
                   since the 1500s.
@@ -381,7 +396,7 @@
                             <div class="position-relative">
                               <div class="rotate-img">
                                 <img
-                                  src="assets/images/dashboard/home_7.jpg"
+                                  src="assets/images/video/eenbeetjetheofiel.jpg"
                                   alt="thumb"
                                   class="img-fluid"
                                 />
