--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="zxx">
   <head>
-    <!-- Required meta tags -->
+    <!-- Required meta tags -->    
+    <title>Tedeapoolse Telegraaf</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="author" content="Willem Devriendt">
-    <meta name="description" content="Welkom bij de Tedeapoolse Telegraaf, de krant van wakker Tedeapolis"
-    <title>Tedeapoolse Telegraaf</title>
+    <meta name="description" content="Welkom bij de Tedeapoolse Telegraaf, de krant van wakker Tedeapolis">
     <!-- plugin css for this page -->
     <link
       rel="stylesheet"
